k8s-specifications/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: postgresql-db
  template:
    metadata:
      labels:
        app: postgresql-db
    spec:
      containers:
        - name: postgresql-db
          image: postgres:latest
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: db-data
              mountPath: /data
      ## VOLUME DEFINITION
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data-disk
        - name: db-envs
          configMap:
            name: db-envs
