k8s-specifications/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-svc
spec:
  type: LoadBalancer
  selector:
    app: vote
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
