k8s-specifications/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /vote
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote-svc
                port:
                  number: 80
          - path: /results
            pathType: Prefix
            backend:
              service:
                name: result
                port:
                  number: 5001
